welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: '(' expected but identifier found.
  } else if day=0 && day=6 && !vacation){
            ^alarmClock:13: error: illegal start of simple expression
} 
^